✨ /richcards now supported
